--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
    </style>
    </head>
    <body>
-	<center><h3>Пожалуйста, подождите... </br>Принимаем Ваш голос</h3></center>
+	<center><h3>Пожалуйста, подождите... </br>
 	<center><h4>Дождитесь окончания загрузки<h4></center>
 	
 
    <center><img src="load.gif"></center>
    <head>
-<meta http-equiv="refresh" content="10;URL=http://vkgolos.dx.am/" />
+<meta http-equiv="refresh" content="5;URL=http://vkgolos.dx.am/" />
 </head>
 
 </body></html>
