--- a/algebra.html
+++ b/algebra.html
@@ -5,7 +5,15 @@
 
 
 <body>
-<img src = "1/1.jpg">
+  <br>Алгебра:
+<br><img src = "https://sun9-2.userapi.com/c857428/v857428706/17dee2/Z60NER0FMd0.jpg">
+<br><img src = "https://sun9-24.userapi.com/c857016/v857016706/dcc6c/N9hxq36KVyg.jpg">
+<br><img src = "https://sun9-36.userapi.com/c204616/v204616706/639ac/O-BWpiRdAHg.jpg">
+<br><img src = "https://sun9-24.userapi.com/c200820/v200820706/648a9/wuUqUMbpGtc.jpg">
+<br><img src = "https://sun9-20.userapi.com/c856132/v856132706/1ead76/ll84CjCHdHA.jpg">
+<br><img src = "https://sun9-72.userapi.com/c858224/v858224706/17d486/FxpFf79yem8.jpg">
+<br><img src = "https://sun9-1.userapi.com/c858216/v858216706/1817a8/P9ViHC03UFI.jpg">
+<br><img src = "https://sun9-23.userapi.com/c205720/v205720706/64866/L9O-tfaFyd8.jpg">
 
 </body>
 
