--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	   <title>Артём Махов или Екатерина Трофимова</title>
+	   <title>Артём Махов или Арина Кляро</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
  body{
