--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ﻿<html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	   <title>Артём Махов или Арина Кляро</title>
+	   <title>Танька Фомина или Арина Кляро</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-	   <meta name="description" content="Проголосуйте за Артёма Махова или за Арину Кляро" />
+	   <meta name="description" content="Проголосуйте за Танюху Фомину или за Арину Кляро" />
 <style>
  body{
     background-color: #FFFFFF;
